Don't emit Category::changed() when there's no change.

Emitting the changed() signal caused the
CategoryCollection::categoryCollectionChanged() signal when the Viewer
context menu "show" was activated, causing the AnnotationDialog being
closed if it was open at the time.

BUG: 476561